app/assets/stylesheets/application.scss
/* ... */
.form-check-box svg {
  display: none;
  width: 16px;
}
.form-check-box.active svg {
  display: block;
}
.form-check-box:hover svg {
  display: block;
}
.form-check-box svg.active {
  display: block;
}
section.report .button {
  font-size: em(18,16) !important;
  height: 50px;
}
.form-radio-button-wrapper {
  align-items: center;
  display: flex;
  gap: 0 20px;
}
.form-radio-button-con {
  align-items: center;
  color: $black;
  display: grid;
  gap: 0 10px;
  grid-template-columns: 30px auto;
  font-family: $general;
  font-size: em(16,16);
  font-weight: $medium;
  line-height: em(16,16);
}
.form-radio-button {
  align-items: center;
  box-sizing: border-box;
  border: 1px solid $black;
  cursor: pointer;
  display: flex;
  height: 30px;
  justify-content: center;
  width: 30px;
  @include rounded(50%);
}
.form-radio-button-active {
  display: none;
  background: $black;
  box-sizing: border-box;
  height: 20px;
  width: 20px;
  @include rounded(50%);
}
.form-radio-button:hover .form-radio-button-active {
  display: block;
}
.form-radio-button.active .form-radio-button-active {
  display: block;
}
.dropdown-button {
  background: $white;
  border: 1px solid $black;
  box-sizing: border-box;
  align-items: center;
  cursor: pointer;
  display: grid;
  font-family: $general;
  font-size: em(18,16);
  font-weight: $medium;
  line-height: em(18,18);
  gap: 0 10px;
  grid-template-columns: auto 14px;
  height: 50px;
  justify-content: space-between;
  padding: 0 14px;
  @include rounded(6px);
}
.dropdown-button svg {
  fill: $black;
  width: 100%;
}
ul.dropdown-list {
  background: $white;
  border: 1px solid $black;
  box-sizing: border-box;
  height: 194px;
  overflow-y: scroll;
  @include rounded(6px);
}
ul.dropdown-list li {
  color: $black;
  cursor: pointer;
  font-family: $general;
  font-size: em(18,16);
  font-weight: $medium;
  line-height: em(18,18);
  //padding: 12px 14px;
}
ul.dropdown-list li:hover {
  background: $line;
}

ul.dropdown-list li a {
  color: $black;
  display: block;
  padding: 12px 14px;
}

ul.dropdown-list li.active {
  background: $line;
}

ul.dropdown-list li.check-box a {
  align-items: center;
  display: grid;
  gap: 0 4px;
  grid-template-columns: 30px auto;
  color: $black;
}
ul.dropdown-list li.check-box .form-check-box {
  height: 24px;
  width: 24px;
}
ul.dropdown-list li.check-box svg {
  //width: 16px;
}
ul.dropdown-list li.check-box:hover svg {
  display: block;
}
ul.dropdown-list li.active .form-check-box {
  background: $blue;
}
ul.dropdown-list li.active svg {
  display: block;
}
.podnety-filter-con .dropdown-button {
  font-size: em(16,16) !important;
  line-height: em(16,16) !important;
}
.podnety-filter-con input {
  font-size: em(16,16) !important;
  line-height: em(16,16) !important;
}
.podnety-filter-con ul.dropdown-list li {
  font-size: em(16,16) !important;
  line-height: em(16,16) !important;
}
.form-picture-con {
  align-items: center;
  display: grid;
  gap: 0 20px;
  grid-template-columns: 100px auto;
}
.form-picture-con figure {
  height: 100px;
  overflow: hidden;
  position: relative;
  width: 100px;
  @include rounded(50%);
}
.form-picture-con picture {
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}
.form-picture-con img {
  height: 100%;
  object-fit: cover;
}
.form-picture-con .button {
  margin-top: 0 !important;
  width: fit-content !important;
}
.reset-margin {
  margin: 0 !important
}
.gray-text {
  color: $black-light;
}

// Account
section.account {
  margin-left: auto;
  margin-right: auto;
  max-width: 400px;
}
section.account .button {
  width: 100%;
}
section.account .account-wrapper {
  display: flex;
  flex-direction: column;
  gap: 30px 0;
}
section.account .account-info-con {
  background: $blue-light;
  display: flex;
  flex-direction: column;
  gap: 20px 0;
  padding: 20px;
  @include rounded(15px);
}
section.account .account-info-con .title {
  color: $black;
  font-family: $general;
  font-size: em(20,16);
  font-weight: $semibold;
  line-height: em(20,20);
}
section.account .account-info-con .account-item-con {
  display: flex;
  flex-direction: column;
  gap: 5px 0;
}
section.account .account-info-con .description {
  color: $black-light;
  font-family: $general;
  font-size: em(16,16);
  font-weight: $medium;
  line-height: em(24,16);
}
section.account .account-info-con .item-title {
  color: $black;
  font-family: $general;
  font-size: em(16,16);
  font-weight: $medium;
  line-height: em(24,16);
}
section.account .button {
  margin-top: 0 !important;
}
section.account .account-delete {
  background: $pink !important;
}
section.account .account-delete .description {
  color: $black;
}
section.account .account-item-subject {
  align-items: center;
  display: grid;
  gap: 0 10px;
  grid-template-columns: 65px auto;
}
section.account .account-item-subject figure {
  height: 65px;
  overflow: hidden;
  position: relative;
  width: 65px;
  @include rounded(50%);
}
section.account .account-item-subject figure picture {
  bottom: 0;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
}
section.account .account-item-subject figure img {
  height: 100%;
  object-fit: cover;
}

// Loading
.loading-con {
  align-items: center;
  display: flex;
  height: 100%;
  justify-content: center;
  padding: per(60,280) 0;
  width: 100%;
}
.loading-con figure {
  width: per(200,280);
}











// Podnety
section.podnety nav.suggestions {
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
  margin-bottom: 30px;
}
section.podnety nav.suggestions .button-location {
  //fill: $black;
  //stroke: $black;
}


// Filter
.podnety-filter-con {
  background: rgba(0, 0, 0, 0.5);
  bottom: 0;
  display: none;
  left: 0;
  position: fixed;
  right: 0;
  top: 0;
  width: 100%;
  z-index: 10002;
}
.podnety-filter-wrapper {
  background: $white;
  bottom: 0;
  box-sizing: border-box;
  overflow-y: scroll;
  padding: 20px;
  position: absolute;
  right: 0;
  top: 0;
  width: 280px;
}
/* ... */

